Fix EDD Cart on Mobile Menus

--- a/assets/css/edd/edd.css
+++ b/assets/css/edd/edd.css
@@ -1516,3 +1516,58 @@ Easy Digital Downloads Cart
   border-color: #13aff0;
   height: 10px;
 }
+
+/** Mobile Fixes **/
+#mobile-fullscreen .owp-mini-cart,
+#mobile-dropdown .owp-mini-cart {
+  display: none;
+}
+
+#mobile-dropdown .edd-menu-icon {
+  text-align: left;
+  display: block;
+}
+
+#sidr .sidr-class-edd-cart-number-of-items {
+  display: none;
+}
+
+#sidr .sidr-class-eddmenucart-container {
+  position: relative;
+  display: inline-block;
+  min-width: 2em;
+  height: 2em;
+  font-size: 1em;
+  line-height: 1.7em;
+  font-weight: bold;
+  border: 2px solid #333;
+  color: #333;
+  padding: 0 3px;
+  vertical-align: middle;
+  text-align: center;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#sidr .sidr-class-eddmenucart-container:after {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 14px;
+  height: 8px;
+  margin-left: -7px;
+  margin-bottom: 0;
+  border: 2px solid #333;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border-bottom: 0;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
